--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>My Webpage</title>
+    </head>
     <body>
         <h1>Thái Xuân Hiếu</h1>
-        <p>Show</p>
+        <p>57K1-CNTT</p>
     </body>
 </html>
