--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>My Webpage</title>
     </head>
     <body>
-        <p>My profile</p><a href="https://hieuxt.github.io/">HieuXT</a>
+        <p>My profile<a href="https://hieuxt.github.io/">HieuXT</a></p>
         <h1>Thái Xuân Hiếu</h1>
         <p>57K1-CNTT</p>
     </body>
